# millenium-falcon-challenge

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
doc/: assignement.md  non-project-setup.md  optional-setup.md
frontend/: Dockerfile  index.html  main.js  package-lock.json
frontend/src/: App.vue
frontend/src/components/: GiveMeTheOdds.vue
millenium_falcon_challenge/: algorithm.py  back_end.py  cli.py  consts.py  main.py  trajectory.py
millenium_falcon_challenge/logic/: algorithm.py
millenium_falcon_challenge/model/: empire.py  millennium_falcon.py  odds_of_success.py  routes.py
tests/: conftest.py  test_integration.py  test_millenium_falcon_challenge.py  test_unit.py
tests/model/: answer.py
