[tool.poetry]
name = "millenium-falcon-challenge"
version = "0.1.0"
description = ""
authors = ["Bruno Lannoo <Brunolannoo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
datasette = "^0.59.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
