[tool.poetry]
name = "millenium-falcon-challenge"
version = "0.1.0"
description = ""
authors = ["Bruno Lannoo <Brunolannoo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.9.0"
SQLAlchemy = "^1.4.29"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
datasette = "^0.59.4"
assertpy = "^1.1"
datamodel-code-generator = "^0.11.15"
black = "^21.12b0"
mypy = "^0.930"
sqlalchemy2-stubs = "^0.0.2-alpha.19"
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
